fix checkbox size on mobile

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -135,4 +135,24 @@ ul.comment {
     }
 }
 
+ul.taskdone, 
+ul.task {
+    li {
+        padding-left: 24px;
+        &::before {
+            top: 7px;
+            width: 14px;
+            height: 14px;
+        }
+        p {
+            font-size: 16px;
+        }
+    }
+}
+ul.taskdone{
+    li::before {
+        font-size: 8px;
+        line-height: 14px;
+    }
+}
 }}
